kubernetes/apps/tools/owncloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: tools
spec:
  ports:
    - port: 8080
  selector:
    app: owncloud
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-mariadb
  namespace: tools
spec:
  ports:
    - port: 3306
  selector:
    app: owncloud-mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-redis
  namespace: tools
spec:
  ports:
    - port: 6379
  selector:
    app: owncloud-redis
