kubernetes/apps/tools/owncloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: owncloud
  namespace: tools
spec:
  parentRefs:
    - name: prod
      namespace: gateway
  hostnames:
    - owncloud.local.elmurphy.com
  rules:
    - backendRefs:
        - name: owncloud
          port: 8080
